--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="home.html" class="nav__link">Beranda</a>
+                            <a href="index.html" class="nav__link">Beranda</a>
                         </li>
                         <li class="nav__item">
                             <a href="about.html" class="nav__link">Tentang</a>
@@ -255,6 +255,6 @@
         <!--=============== javascript ===============-->
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@7.4.1/swiper-bundle.min.js"></script>
-        <script src="home.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
