--- a/product.html
+++ b/product.html
@@ -25,7 +25,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="home.html" class="nav__link">Beranda</a>
+                            <a href="index.html" class="nav__link">Beranda</a>
                         </li>
                         <li class="nav__item">
                             <a href="about.html" class="nav__link">Tentang</a>
