--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
           <div class="nav__menu" id="nav-menu">
               <ul class="nav__list">
                   <li class="nav__item">
-                      <a href="home.html" class="nav__link">Beranda</a>
+                      <a href="index.html" class="nav__link">Beranda</a>
                   </li>
                   <li class="nav__item">
                       <a href="tentang.html" class="nav__link">Tentang</a>
@@ -214,7 +214,7 @@
     </div>
 
     <ul class="list">
-       <li><a href="home.html">Beranda</a></li>
+       <li><a href="index.html">Beranda</a></li>
        <li><a href="about.html">Tentang</a></li>
        <li><a href="product.html">Produk</a></li>
     </ul>
@@ -224,6 +224,6 @@
     </p>
     </footer>
    <!--==================== javascript ====================-->
-<script src="home.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
