--- a/product.html
+++ b/product.html
@@ -2206,7 +2206,7 @@
             </div>
       
             <ul class="list">
-               <li><a href="home.html">Beranda</a></li>
+               <li><a href="index.html">Beranda</a></li>
                <li><a href="about.html">Tentang</a></li>
                <li><a href="product.html">Produk</a></li>
             </ul>
