--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <!--==================== header ====================-->
     <header class="header" id="header">
       <nav class="nav container">
-          <a href="home.html" class="nav__logo">FutureTech</a>
+          <a href="index.html" class="nav__logo">FutureTech</a>
 
           <div class="nav__menu" id="nav-menu">
               <ul class="nav__list">
